--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,20 +1,27 @@
 <%= link_to "Back to all movies", movies_path %><br/>
 
-<%= link_to image_tag(@movie.poster_image_url), movie_path(@movie) %>
+
+<% if @movie.poster? %>
+  <%= link_to image_tag(@movie.poster_url(:thumb)), movie_path(@movie) %>
+<% else %>
+  <%= link_to image_tag(@movie.poster_image_url), movie_path(@movie) %>
+<% end %>
 <h2><%= @movie.title %> (<%= link_to "edit", edit_movie_path(@movie) %>, <%= link_to "delete", movie_path(@movie), method: :delete, confirm: "You sure?" %>)</h2>
-<h3><%= formatted_date(@movie.release_date) %></h3>
-<h4>Dir. <%= @movie.director %> | <%= @movie.runtime_in_minutes %> minutes</h4>
-<p><%= @movie.description %></p>
+<h3>Release Date: <%= formatted_date(@movie.release_date) %></h3>
+<h4>Director: <%= @movie.director %> | <%= @movie.runtime_in_minutes %> minutes</h4>
+<h4>Description: <%= @movie.description %></h4>
 
 <hr>
 
 <h3>Reviews of <em><%= @movie.title %></em></h3>
-<h4><%= @movie.review_average %>/10</h4>
+<% if @movie.reviews.any? %>
+  <h4>Review Average: <%= @movie.review_average %>/10</h4>
+<% end %>
 <% if current_user %>
   <% @movie.reviews.each do |review| %>
-    <p><%= review.text %></p>
-    <p><%= review.rating_out_of_ten %>/10</p>
-    <small>- <%= review.user.full_name %></small><br/>
+    <p>Review: <%= review.text %></p>
+    <p>Rating: <%= review.rating_out_of_ten %>/10</p>
+    <small>- <%= review.user.full_name.titleize %></small><br/>
   <% end %>
   <p><%= link_to "Write a review!", new_movie_review_path(@movie) %></p>
 <% else %>
