--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,8 @@
 <footer>
   <small>
-    <% if current_user %>
+    <% if current_user && admin %>
+      Signed in as admin (<%= link_to "Admin User Management", admin_users_path %>, <%= link_to "Back to movies", movies_path %>, <%= link_to "Log out", session_path("current"), method: :delete %>)
+    <% elsif current_user %> 
       Signed in as <%= current_user.full_name.titleize %> (<%= link_to "Log out", session_path("current"), method: :delete %>)
     <% else %>
       <%= link_to "Log In", new_session_path %> | <%= link_to "Sign Up", new_user_path %>
