--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,5 @@
 <h1>User List</h1>
+<%= link_to "Create user", new_admin_user_path %>
 
 <%= paginate @users %>
 <table>
@@ -8,6 +9,8 @@
     <th>lastname</th>
     <th>created_at</th>
     <th>admin</th>
+    <th>edit</th>
+    <th>delete</th>
   </tr>
   <% @users.each do |user| %>
     <tr>
@@ -16,6 +19,8 @@
       <td><%= user.lastname %></td>
       <td><%= user.created_at %></td>
       <td><%= user.admin %></td>
+      <td><%= link_to "edit", edit_admin_user_path(user) %></td>
+      <td><%= link_to "delete", admin_user_path(user), method: :delete, confirm: "You sure?" %>
     </tr>
   <% end %>
 </table>
