--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,9 @@
 <h1>Rotten Mangoes</h1>
+<%= link_to "Home", movies_path %>
 <%= link_to "Submit a movie!", new_movie_path %>
+
 <hr>
+<%= render "search_form" %><br>
 <% @movies.each do |movie| %>
   <% if movie.poster? %>
     <%= link_to image_tag(movie.poster_url(:thumb)), movie_path(movie) %>
