--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,7 +5,7 @@
   <% @new_release_movies.each do |movie| %>
     <% i+=1 %>
     <div>
-      <a href="/movies/moviemodal" data-toggle="modal" data-target="#movie-modal<%= i %>"><%= image_tag(movie.poster_image_url) %></a>
+      <a href="/movies/moviemodal" data-toggle="modal" data-target="#latest-movie-modal<%= i %>"><%= image_tag(movie.poster_image_url) %></a>
       <p id="movie-title"><%= link_to truncate(movie.title, length: 20), movie_path(movie) %></p>
       <div class="movie-year">
         <%= year(movie.release_date) %>
@@ -16,40 +16,62 @@
     </div>
   <% end %>
 </div>
-"%#{params[:search]}%"
+
 <% i=0 %>
 <% @new_release_movies.each do |movie| %>
   <% i+=1 %>
-  <div class="modal fade" id="movie-modal<%= i %>">
-    <div class="modal-dialog">
+  <div class="modal fade" id="latest-movie-modal<%= i %>">
+    <div class="modal-dialog movie-modal-size">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
-          <h4 class="modal-title"><%= movie.title %></h4>
+          <h3 class="modal-title"><%= movie.title %></h3>
         </div>
         <div class="modal-body">
-          <%= link_to image_tag(movie.poster_image_url), movie_path(movie) %>
-            <h2><%= movie.title %> (<%= link_to "edit", edit_movie_path(movie) %>, <%= link_to "delete", movie_path(movie), method: :delete, confirm: "You sure?" %>)</h2>
-            <h3>Release Date: <%= formatted_date(movie.release_date) %></h3>
-            <h4>Director: <%= movie.director %> | <%= movie.runtime_in_minutes %> minutes</h4>
-            <h4>Description: <%= movie.description %></h4>
+          <div>
+          <%= link_to image_tag(movie.poster_image_url, :class => "modal-image"), movie_path(movie) %>
+          </div>
+          <div>
+          <h4 class="modal_movie_title"><%= movie.title %> <small>(<%= formatted_date(movie.release_date) %>) <%= link_to "Edit", edit_movie_path(movie) %> <%= link_to "Delete", movie_path(movie), method: :delete, confirm: "You sure?" %> </small></h4>
+          <p>Director: <%= movie.director %> | <%= movie.runtime_in_minutes %> minutes</p>
+          <p><%= movie.description %></p>
+          </div>
 
-            <hr>
+          <hr>
 
-            <h3>Reviews of <em><%= movie.title %></em></h3>
-            <% if movie.reviews.any? %>
-              <h4>Review Average: <%= movie.review_average %>/10</h4>
-            <% end %>
-            <% if current_user %>
-              <% movie.reviews.each do |review| %>
-                <p>Review: <%= review.text %></p>
+          <h4>Reviews</h4>
+          <% if movie.reviews.any? %>
+            <p>Review Average: <%= movie.review_average %>/10</p>
+            <span class="rating">
+                <input type="radio" class="rating-input"
+                    id="rating-input-1-5" name="rating-input-1">
+                <label for="rating-input-1-5" class="rating-star"></label>
+                <input type="radio" class="rating-input"
+                    id="rating-input-1-4" name="rating-input-1">
+                <label for="rating-input-1-4" class="rating-star"></label>
+                <input type="radio" class="rating-input"
+                    id="rating-input-1-3" name="rating-input-1">
+                <label for="rating-input-1-3" class="rating-star"></label>
+                <input type="radio" class="rating-input"
+                    id="rating-input-1-2" name="rating-input-1">
+                <label for="rating-input-1-2" class="rating-star"></label>
+                <input type="radio" class="rating-input"
+                    id="rating-input-1-1" name="rating-input-1">
+                <label for="rating-input-1-1" class="rating-star"></label>
+            </span>
+          <% end %>
+          <% if current_user %>
+            <% movie.reviews.each do |review| %>
+              <blockquote class="movie-review">
+                <p><%= review.text %></p>
                 <p>Rating: <%= review.rating_out_of_ten %>/10</p>
                 <small>- <%= link_to review.user.full_name.titleize, user_path(review.user_id) %></small><br/>
-              <% end %>
-              <p><%= link_to "Write a review!", new_movie_review_path(movie) %></p>
-            <% else %>
-              <p>Please <%= link_to "log in", new_session_path %> to see reviews and add your own.</p> 
+              </blockquote>
             <% end %>
+            <p><%= link_to "Write a review!", new_movie_review_path(movie) %></p>
+          <% else %>
+            <p>Please <%= link_to "log in", new_session_path %> to see reviews and add your own.</p> 
+          <% end %>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -59,6 +81,7 @@
     </div>
   </div>
 <% end %>
+
 
 <h4 class="movie-topics">Sort By</h4>
 <%= form_tag({controller: "movies", action: "index" }, method: "get", class: "sort-by-form") do %>
@@ -71,16 +94,18 @@
         ['Director', "director"],
         ['Newest', "newest"]
         ], 0
-    ), class: "selection-style") %>
+    ), class: "selection-style") %> <i class="fa fa-sort-desc"></i>
   </div>
   <div class="sort-by-search">
     <%= button_tag '<i class="fa fa-search"></i>'.html_safe, class: "search-button" %>
   </div>
 <% end %>
 <div class="movie-slider">
+  <% i=0 %>
   <% @movies.each do |movie| %>
+  <% i+=1 %>
     <div>
-      <%= link_to image_tag(movie.poster_image_url), movie_path(movie) %>
+      <a href="/movies/moviemodal" data-toggle="modal" data-target="#movie-modal<%= i %>"><%= image_tag(movie.poster_image_url) %></a>
       <p id="movie-title"><%= link_to truncate(movie.title, length: 20), movie_path(movie) %></p>
       <div class="movie-year">
         <%= year(movie.release_date) %>
@@ -92,5 +117,69 @@
   <% end %>
 </div>
 
+<% i=0 %>
+<% @movies.each do |movie| %>
+  <% i+=1 %>
+  <div class="modal fade" id="movie-modal<%= i %>">
+    <div class="modal-dialog movie-modal-size">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
+          <h3 class="modal-title"><%= movie.title %></h3>
+        </div>
+        <div class="modal-body">
+          <div>
+          <%= link_to image_tag(movie.poster_image_url, :class => "modal-image"), movie_path(movie) %>
+          </div>
+          <div>
+          <h4 class="modal_movie_title"><%= movie.title %> <small>(<%= formatted_date(movie.release_date) %>) <%= link_to "Edit", edit_movie_path(movie) %> <%= link_to "Delete", movie_path(movie), method: :delete, confirm: "You sure?" %> </small></h4>
+          <p>Director: <%= movie.director %> | <%= movie.runtime_in_minutes %> minutes</p>
+          <p><%= movie.description %></p>
+          </div>
+
+          <hr>
+
+          <h4>Reviews</h4>
+          <% if movie.reviews.any? %>
+            <p>Review Average: <%= movie.review_average %>/10</p>
+            <span class="rating">
+                <input type="radio" class="rating-input"
+                    id="rating-input-1-5" name="rating-input-1">
+                <label for="rating-input-1-5" class="rating-star"></label>
+                <input type="radio" class="rating-input"
+                    id="rating-input-1-4" name="rating-input-1">
+                <label for="rating-input-1-4" class="rating-star"></label>
+                <input type="radio" class="rating-input"
+                    id="rating-input-1-3" name="rating-input-1">
+                <label for="rating-input-1-3" class="rating-star"></label>
+                <input type="radio" class="rating-input"
+                    id="rating-input-1-2" name="rating-input-1">
+                <label for="rating-input-1-2" class="rating-star"></label>
+                <input type="radio" class="rating-input"
+                    id="rating-input-1-1" name="rating-input-1">
+                <label for="rating-input-1-1" class="rating-star"></label>
+            </span>
+          <% end %>
+          <% if current_user %>
+            <% movie.reviews.each do |review| %>
+              <blockquote class="movie-review">
+                <p><%= review.text %></p>
+                <p>Rating: <%= review.rating_out_of_ten %>/10</p>
+                <small>- <%= link_to review.user.full_name.titleize, user_path(review.user_id) %></small><br/>
+              </blockquote>
+            <% end %>
+            <p><%= link_to "Write a review!", new_movie_review_path(movie) %></p>
+          <% else %>
+            <p>Please <%= link_to "log in", new_session_path %> to see reviews and add your own.</p> 
+          <% end %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
 
 <%= render "users/usermodal" %>
