--- a/app/views/movies/_moviemodal.html.erb
+++ b/app/views/movies/_moviemodal.html.erb
@@ -31,7 +31,9 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Save changes</button>
+        <% if current_user %>
+          <button type="submit" class="btn btn-primary">Save changes</button>
+        <% end %>
       </div>
     </div>
   </div>
