--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>User Name: <%= @user.full_name %></h1>
+<h1><%= @user.full_name %></h1>
 
 <p>Email: <%= @user.email %></p><hr>
 <% @user.reviews.each do |review| %>
