--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
 
   <%= csrf_meta_tags %>
   <!-- Slick -->
-  <link href="http://kenwheeler.github.io/slick/slick/slick.css" rel="stylesheet"/>
-  <link href="http://kenwheeler.github.io/slick/slick/slick-theme.css" rel="stylesheet"/>
+  <link href="https://kenwheeler.github.io/slick/slick/slick.css" rel="stylesheet"/>
+  <link href="https://kenwheeler.github.io/slick/slick/slick-theme.css" rel="stylesheet"/>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- Slick -->
