redirect to https

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,3 @@
-<script>
-  window.location.href = "https://moviebox-alvin.herokuapp.com/movies";
-</script>
-
 <h3 class="movie-topics">New Releases</h3>
 <div class="movie-slider-auto">
   <% @new_release_movies = Movie.where("release_date >= ?", (Time.now.ago(1.year))) %>
@@ -215,3 +211,13 @@
 <% end %>
 
 <%= render "users/usermodal" %>
+
+
+<script>
+  var current_location = window.location.href;
+  if (current_location != "https://moviebox-alvin.herokuapp.com/movies") {
+    window.location.href = "https://moviebox-alvin.herokuapp.com/movies";
+  } else {
+
+  }
+</script>
